--- a/style.css
+++ b/style.css
@@ -135,6 +135,8 @@ body {
 .botaoCarrossel {
     display: flex;
     justify-content: space-around;
+
+    margin: 10px;
 }
 
 #anterior {
@@ -155,4 +157,18 @@ body {
     width: 150px;
 }
 /* fim botoes */
+
+/* img */
+#carrosselImagem {
+    display: flex;
+    margin: 0;
+    padding: 0;
+
+    width: 300px;
+    height: 400px;
+
+    justify-content: center;
+    align-items: center;
+}
+/* fim img */
 
