--- a/style.css
+++ b/style.css
@@ -131,12 +131,57 @@ body {
 
 
 /* CARROSEL */
+/* fundo */
+.detalhesFundo {
+    display: flex;
+    margin: 25px;
+
+    padding: 30px;
+    height: 600px;
+    width: 800px;
+
+    align-items: center;
+    justify-content: space-around;
+
+    border-radius: 20px;
+
+    background-color: #fff;
+    box-shadow: 0px 0px 45px rgba(0, 0, 0, 0.2);
+}
+
+.exibicao {
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.detalhes {
+    display: flex;
+
+    flex-direction: column;
+
+    width: 250px;
+    height: 400px;
+}
+/* fim fundo */
 /* botoes */
+.carrossel {
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+}
+
 .botaoCarrossel {
     display: flex;
     justify-content: space-around;
 
-    margin: 10px;
+    margin: 10px 0px;
 }
 
 #anterior {
@@ -149,7 +194,7 @@ body {
 }
 
 #proximo {
-    background-color: #2154fb   ;
+    background-color: #2154fb;
     color: #fff;
 
     border: none;
